--- a/source/stylesheets/product-carousel.sass
+++ b/source/stylesheets/product-carousel.sass
@@ -73,6 +73,9 @@
 .product-thumbnail-carousel.splide:not( .is-overflow ) .splide__slide:last-child
   margin: 0 !important
 
+.splide__track
+  border-radius: var(--border-radius)
+
 .splide__arrow
   opacity: 0
   transition: opacity .2s ease
