--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -47,6 +47,7 @@
 
     @media screen and (min-width: $break-small+1)
       .prod-thumb-info
+        border-radius: var(--border-radius)
         display: flex
         align-items: center
         background: var(--button-background-color)
@@ -137,8 +138,10 @@
   font-weight: normal
   padding: 32px 0
   justify-content: center
+  margin-top: 32px
 
   @media screen and (max-width: $break-small)
+    margin-top: 8px
     font-size: .875rem
 
 .page-arrows
